...
        OBEmailTextField(
            modifier = Modifier
                .focusGroup()
                .fillMaxWidth()
                .wrapContentHeight()
                .semantics {
                    contentDescription = "LoginEmailTextField"
                },
            text = email,
            isEnabled = true,
            rightIconRes = R.drawable.ic_clear,
            keyboardActions = KeyboardActions.Default,
            onRightIconResClicked = {
...
        OBPasswordTextField(
            modifier = Modifier
                .focusGroup()
                .fillMaxWidth()
                .wrapContentHeight()
                .semantics {
                    contentDescription = "LoginPasswordTextField"
                },
            password = password,
            label = stringResource(id = R.string.password_label),
            placeholder = stringResource(id = R.string.password_placeholder),
            keyboardActions = KeyboardActions.Default,
            isEnabled = true,
...
