...
                        tint =  Color.White
                    )
                }
                Text(
                    modifier = Modifier
                        .semantics {
                            contentDescription = "ToastTextContent"
                        }
                        .constrainAs(textRef) {
                            start.linkTo(iconRef.end, 8.dp)
                            end.linkTo(closeIconRef.start, 8.dp)
                            width = Dimension.fillToConstraints
                            top.linkTo(parent.top)
...
